--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
         "@vue/cli-plugin-typescript": "~5.0.0",
         "@vue/cli-plugin-vuex": "~5.0.0",
         "@vue/cli-service": "~5.0.0",
+        "node-sass": "^7.0.3",
         "sass": "^1.32.7",
-        "sass-loader": "^12.0.0",
+        "sass-loader": "^12.6.0",
         "typescript": "~4.5.5",
         "vue-template-compiler": "^2.6.14"
     }
