--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "axios": "^1.3.4",
         "core-js": "^3.8.3",
         "vue": "^2.6.14",
+        "vue-axios": "^3.5.2",
         "vue-class-component": "^7.2.3",
         "vue-property-decorator": "^9.1.2",
         "vue-router": "^3.5.1",
